# finite-news

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy-finite-news.sh  dev.ipynb  finite_news.ipynb  pyproject.toml  requirements.txt  run.py
sample_files/: README.md  config_SUBSCRIBER_NAME.yml  publication_config.yml  substance_rules.yml  template.htm  thoughts_of_the_day.yml
tasks/: editing.py  events.py  io.py  layout.py  publishing.py  reporting.py  selenium.py  sports.py  stocks.py  weather.py
